--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,9 @@
     "grunt-contrib-jst": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.6.0"
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-uglify": "~0.3.2"
   },
   "engines": {
     "node": ">=0.8.0"
